objects/ITB_Asset__c.object
<CustomObject>
    <description>Asset Object to store the related asset for the Case</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssetComments__c</fullName>
        <label>Asset Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AssetNum__c</fullName>
        <formula>HYPERLINK($Label.CL10071 +&apos;/&apos; + Id , LegacyAssetNumber__c , &apos;_parent&apos;)</formula>
        <label>Asset #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <description>ITB Product From InTouch</description>
        <label>Commercial Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Assets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LegacyAccountID__c</fullName>
        <label>Account Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyAccountName__c</fullName>
        <label>Account</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyAssetId__c</fullName>
        <description>Row Id from InTouch</description>
        <label>Legacy AssetId</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyAssetNumber__c</fullName>
        <label>Asset #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyName__c</fullName>
        <description>Legacy Name for ITB will be always ITB_SB</description>
        <label>Legacy Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ReferenceLink__c</fullName>
        <formula>IF( NOT( ISBLANK(TECH_AssetRefrenceLinkID__c) ) , HYPERLINK( $Label.CLMAY13CCC27 + $Label.CLMAY13CCC28  + TECH_AssetRefrenceLinkID__c + $Label.CLMAY13CCC29 , &apos;Link to Asset in Intouch&apos;), &apos;&apos;)</formula>
        <label>Reference Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNumber__c</fullName>
        <description>Serial Number from InTouch</description>
        <externalId>true</externalId>
        <label>Serial#</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StateProvince__c</fullName>
        <label>State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_AssetRefrenceLinkID__c</fullName>
        <label>TECH_AssetRefrenceLinkID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>TECH_UniqueID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>ZipCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>ITB Asset</label>
    <listViews>
        <fullName>All2</fullName>
        <columns>NAME</columns>
        <columns>LegacyAccountName__c</columns>
        <columns>City__c</columns>
        <columns>AssetComments__c</columns>
        <columns>CommercialReference__c</columns>
        <columns>Case__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Costa_Rica_assets</fullName>
        <columns>LegacyAssetId__c</columns>
        <columns>SerialNumber__c</columns>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>AssetNum__c</columns>
        <columns>LegacyAccountName__c</columns>
        <columns>LegacyName__c</columns>
        <columns>Country__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Costa Rica</value>
        </filters>
        <label>Costa Rica assets</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ITB_Assets_Mexico</fullName>
        <columns>NAME</columns>
        <columns>LegacyAccountName__c</columns>
        <columns>Address__c</columns>
        <columns>SerialNumber__c</columns>
        <columns>StateProvince__c</columns>
        <columns>LegacyAssetNumber__c</columns>
        <columns>CommercialReference__c</columns>
        <columns>LegacyName__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>LegacyAssetId__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Case__c</columns>
        <columns>LegacyAccountID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Mexico</value>
        </filters>
        <label>ITB Assets Mexico</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>NO_All_Assets</fullName>
        <columns>NAME</columns>
        <columns>LegacyAccountName__c</columns>
        <columns>City__c</columns>
        <columns>AssetComments__c</columns>
        <columns>CommercialReference__c</columns>
        <columns>Case__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Norway</value>
        </filters>
        <label>NO - All Assets</label>
        <language>en_US</language>
        <sharedTo>
            <group>NOAllUsers</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ITBA-{0000}</displayFormat>
        <label>bFO Asset #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ITB Assets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>